# ReAnnota

./: .gitignore  LICENCE  README.md  environment.yml  pyproject.toml
docs/: Integration_info.md  TO-DOs.md
examples/: README.md  example_run.sh
src/ReAnnota/: __init__.py
src/ReAnnota/analysis/: __init__.py  compare_gffs.py  isolate_hypotheticals.py
src/ReAnnota/cli/: annotate.py  main.py
src/ReAnnota/converters/: __init__.py  gbff_to_gff.py  merge_gbff.py
src/ReAnnota/parsers/: __init__.py
src/ReAnnota/visualization/: __init__.py
src/cyano_annotation/: __init__.py
src/cyano_annotation/analysis/: __init__.py  compare_gffs.py
src/cyano_annotation/cli/: __init__.py  annotate.py  main.py
src/cyano_annotation/converters/: __init__.py  gbff_to_gff.py  merge_gbff.py
src/cyano_annotation/parsers/: __init__.py  eggnog.py  interpro.py  pseudofinder.py
src/cyano_annotation/visualization/: __init__.py
src/reannota/: __init__.py
src/reannota/analysis/: __init__.py  compare_gffs.py
src/reannota/cli/: __init__.py  annotate.py  main.py
src/reannota/converters/: __init__.py  gbff_to_gff.py  merge_gbff.py
src/reannota/parsers/: __init__.py  antismash.py  eggnog.py  gecco.py  interpro.py  pseudofinder.py
src/reannota/visualization/: README.md  __init__.py  circos_plot.py
tests/: __init__.py
tests/fixtures/: Antismash_output.js  Comparison_genome.gff3  Egg_NOG_anotation.tsv  Interpro_anotation.gff3  README.md  contig_1_cluster_1.gbk  gecco_Cylindrospermopsis_genome_gbks.csv  pseudofindertest_pseudos.gff
